log
ju., 17 de mar. de 2022 17:22:37: 
 tests:  0|6
total_score: 0/70
59e5b7d
ju., 17 de mar. de 2022 17:23:06: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b931316
ju., 17 de mar. de 2022 21:43:24: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
ca62006
ju., 17 de mar. de 2022 21:44:11: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
668bd96
ju., 17 de mar. de 2022 21:47:03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
82fb7df
ju., 17 de mar. de 2022 21:49:05: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
e450407
vi., 18 de mar. de 2022 21:48:49: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
97a3ab4
vi., 18 de mar. de 2022 21:51:57: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e690ee1
vi., 18 de mar. de 2022 21:52:50: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3041337
vi., 18 de mar. de 2022 21:54:00: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9a63ba
vi., 18 de mar. de 2022 21:55:53: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:28: error: comparison between pointer and integer [-Werror]
     if(!list->current->next!=NULL){
                            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7abdec3
vi., 18 de mar. de 2022 21:56:47: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b59d9c
vi., 18 de mar. de 2022 21:57:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5299370
vi., 18 de mar. de 2022 21:58:25: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
e3bd6d9
vi., 18 de mar. de 2022 21:59:55: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4fbcfe7
vi., 18 de mar. de 2022 22:01:37: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
32fcf08
vi., 18 de mar. de 2022 22:02:26: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
ac123ab
vi., 18 de mar. de 2022 22:03:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4d1e74e
vi., 18 de mar. de 2022 22:03:55: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f25b70e
vi., 18 de mar. de 2022 22:04:33: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
41509f0
